--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-BASE_HOSTNAME="https://getgratitude.app"
-DOMAIN="https://getgratitude.app"
-SHARE_DOMAIN="https://getgratitude.app"
+BASE_HOSTNAME="https://getgrateful.app"
+DOMAIN="https://getgrateful.app"
+SHARE_DOMAIN="https://getgrateful.app"
 ENVIRONMENT="PRODUCTION"
 CODEPUSH_IOS_KEY="smx0-WVTJAW5BHL9wBnMOp0vsqOYa8aee362-2a2f-432b-9c14-8b2d2a13ec17"
 CODEPUSH_ANDROID_KEY="Pn5RAJ-eVHmnF92hHWLBdPrOu5oia8aee362-2a2f-432b-9c14-8b2d2a13ec17"
